fix: get rid of most IDE warnings